compiling index jsx

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "start": "start-storybook -p 6007",
     "build": "build-storybook -o docs",
-    "transpile": "babel --plugins inline-import-data-uri,@babel/plugin-proposal-class-properties packages --out-dir dist"
+    "transpile": "babel --plugins inline-import-data-uri,@babel/plugin-proposal-class-properties packages --out-dir dist",
+    "generate-index": "babel --plugins inline-import-data-uri,@babel/plugin-proposal-class-properties index.jsx --out-file index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
